# spicy-regs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  test_iceberg_catalog.py
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  help_wanted.yml
.github/workflows/: _rollup.yml  ci.yml  deploy-docs.yml  deploy-mcp.yml  etl-new-pipeline.yml  etl.yml  integration.yml  rollup-agency-monthly-volume.yml  rollup-agency-stats.yml  rollup-discovery-signals.yml  rollup-docket-search.yml  rollup-feed-summary.yml  rollup-fr-docket-links.yml  rollup-lifecycles.yml  seed-comments-catalog.yml
api/: .env.example  CHANGELOG  Dockerfile  README.md  langgraph.json  pyproject.toml
api/data/: comment-ACF-2025-0038-0002.json  docket-ACF-2025-0038.json  document-ACF-2025-0038-0001.json
api/notebooks/: mirrulations_to_parquet.py
api/notebooks/__marimo__/session/: mirrulations_to_parquet.py.json
api/src/: main.py
api/src/agent/: graph.py
api/src/agent/utils/: serializer.py  state.py  system_prompt.py  tools.py
api/src/db/: __init__.py  config.py  constants.py  models.py  service.py  utils.py
api/src/logger/: __init__.py
api/src/mirrulations/: service.py
data_dictionary/: descriptions.yaml
docs/: CNAME  index.md
docs/tables/: agency_monthly_volume.md  agency_stats.md  comments.md  comments_index.md  dockets.md  documents.md  feed_summary.md
etl/: README.md  cli.py  download_r2.py  embed.py  etl.py  generate_analytics.py  migrate_to_iceberg.py  pyproject.toml  upload_r2.py
mcp-server/: .gitignore  README.md  requirements.txt  vercel.json
mcp-server/api/: _icon.py  index.py
mcp-server/public/: index.html
notebooks/: README.md  campaign_detection.ipynb  cross_docket_analysis.ipynb  data_explorer.ipynb  docket_analysis.ipynb  document_navigation.ipynb  entity_resolution.ipynb  federal_register.ipynb  iceberg_explorer.ipynb  influence_mapping.ipynb  position_sentiment.ipynb  query_data.ipynb  search_capabilities.ipynb  vector_search.ipynb
plugins/spicyregs/: INSTALL.md
plugins/spicyregs/.claude-plugin/: plugin.json
plugins/spicyregs/.codex-plugin/: plugin.json
plugins/spicyregs/skills/spicyregs/: SKILL.md
plugins/spicyregs/skills/spicyregs/agents/: openai.yaml
plugins/spicyregs/skills/spicyregs/references/: data-layout.md  provider-agnostic-prompt.md
plugins/spicyregs/skills/spicyregs/scripts/: find_duplicate_regulations.py  query_spicy_regs.py
sample-data/: README.md  comment-ACF-2025-0038-0004.json  document-ACF-2025-0038-0001.json
sample-data/mirrulations/: README.md  docket-ACF-2025-0038.json
scripts/: check_comments_freshness.py  gen_icon.py  migrate_comments_partitioned.py  seed_comments_catalog.py
services/search/: Dockerfile  main.py  package-lock.json  package.json  query.py  render.yaml  requirements.txt
services/search/src/: index.ts
services/search/src/lib/: embeddings.ts  lancedb.ts
services/search/src/routes/: search.ts  similar.ts
src/spicy_regs/: backfill_derived_text.py  cli.py  data_dictionary.py  enrich_pdf.py  generate_analytics.py  manifest.py  mcp_server.py  record_types.py  records.py
src/spicy_regs/beam/: README.md  __init__.py  adapters.py  example_pipeline.py
src/spicy_regs/pipeline/: README.md  backfill_derived_text.py  build_fr_search_index.py  build_search_index.py  download_r2.py  enrich_pdf.py  extract.py  federal_register.py  load.py  pipeline.py  transform.py  upload_r2.py
src/spicy_regs/pipelines/: __init__.py  base.py  regulations.py  run.py  staging.py
src/spicy_regs/pipelines/rollups/: __init__.py  agency_monthly_volume.py  agency_stats.py  base.py  discovery_signals.py  docket_search.py  feed_summary.py  fr_docket_links.py  rulemaking_lifecycles.py
src/spicy_regs/schemas/: __init__.py  base.py  regulations.py
src/spicy_regs/sources/: __init__.py  base.py  derived_text.py  iceberg.py  mirrulations.py  parquet.py  parquet_staging.py  pdf.py  r2.py
src/spicy_regs/transforms/: README.md  __init__.py  base.py  build_agency_monthly_volume.py  build_agency_rollups.py  build_agency_stats.py  build_discovery_signals.py  build_feed_summary.py  build_fr_docket_links.py  build_rulemaking_lifecycles.py  build_search_index.py  chain.py  enrich_derived_text.py  extract.py  merge.py  merge_comments_partitioned.py  merge_staging_files.py  partition_comments.py  pdf_text.py  update_comments_index.py  write_staging.py
src/spicy_regs/vectordb/: CHANGELOG  embed.py
supabase/: config.toml
supabase/migrations/: 20241207000000_create_bookmarks.sql
tests/: conftest.py  pdf_fixtures.py  test_backfill_derived_text.py  test_beam_pipeline.py  test_bloom_filter.py  test_data_dictionary.py  test_derived_text.py  test_download_r2.py  test_enrich_pdf.py  test_example_pipeline.py  test_fetch_pdf.py  test_iceberg.py  test_integration_derived_text.py  test_integration_mirrulations.py  test_load.py  test_manifest.py  test_manifest_class.py  test_mcp_server.py  test_mirrulations_reader.py  test_parquet_staging_writer.py  test_pdf_text.py  test_pipelines_base.py  test_r2.py  test_record_types.py  test_records.py  test_regulations_pipeline.py  test_run_pipeline.py  test_sources_base.py  test_staging.py  test_transform.py  test_transforms.py
vectordb/: CHANGELOG
worker/iceberg-proxy/: package-lock.json  package.json  wrangler.toml
worker/iceberg-proxy/src/: index.ts
