[project]
name = "spicy-regs"
version = "0.1.0"
description = "Regulations Data Analysis Tools"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "python-dotenv",
    "polars",
    "pyarrow",
    "tqdm",
    "httpx",
    "duckdb",
    "pandas",
    "prefect",
    "cyclopts",
    "loguru",
    "mcp>=1.10.0",
]

[project.optional-dependencies]
embed = [
    "sentence-transformers",
    "torch",
]

[dependency-groups]
dev = [
    "ipykernel",
    "matplotlib",
    "pre-commit",
    "pyrefly",
    "pytest",
    "ruff",
    "scikit-learn",
    "seaborn",
    "textblob",
    "ty",
]

[project.scripts]
etl = "spicy_regs.pipeline.pipeline:app"
run-pipeline = "spicy_regs.pipelines.regulations:app"
embed = "spicy_regs.vectordb.embed:main"
spicy-regs = "spicy_regs.cli:main"
spicy-regs-mcp = "spicy_regs.mcp_server:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
# Integration tests hit external services (the public Mirrulations S3 mirror)
# and are excluded from the default run so the unit suite stays hermetic. The
# dedicated "Integration (live data)" workflow runs them via `-m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: live test against external data (anonymous Mirrulations S3); run in the Integration CI workflow, not the default suite",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "notebooks"
]

[tool.pyrefly]
project-includes = [
    "**/*.py*"
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [
    "notebooks",
    ".venv",
]
