[project]
name = "spicy-regs"
version = "0.1.0"
description = "Regulations Data Analysis Tools"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "python-dotenv",
    "polars",
    "pyarrow",
    "tqdm",
    "httpx",
    "duckdb>=1.4", # >=1.4 required to ATTACH an Iceberg REST catalog and MERGE INTO it
    "pandas",
    "cyclopts",
    "loguru",
    "mcp>=1.10.0",
    "pypdf",
    "pyyaml",  # data dictionary descriptions (src/spicy_regs/data_dictionary.py)
]

[project.optional-dependencies]
embed = [
    "sentence-transformers",
    "torch",
]
# Experimental: an Apache Beam proof-of-concept for defining pipelines, kept out
# of the core/dev deps on purpose. apache-beam pins heavy transitive deps
# (pyarrow, numpy, protobuf, dill) that can clash with the polars/duckdb/pyarrow
# stack, so install it only when exploring the Beam path. See
# src/spicy_regs/beam/README.md. DirectRunner ships with base apache-beam;
# apache-beam[gcp] is only needed to target Dataflow.
beam = [
    "apache-beam",
]

[dependency-groups]
dev = [
    "ipykernel",
    "matplotlib",
    "pre-commit",
    "pyrefly",
    "pytest",
    "ruff",
    "scikit-learn",
    "seaborn",
    "textblob",
    "ty",
]
docs = [
    "mkdocs-material",
]

[project.scripts]
run-pipeline = "spicy_regs.pipelines.regulations:app"
run-beam-example = "spicy_regs.beam.example_pipeline:app"
enrich-pdf-text = "spicy_regs.enrich_pdf:main"
backfill-comment-text = "spicy_regs.backfill_derived_text:main"
embed = "spicy_regs.vectordb.embed:main"
spicy-regs = "spicy_regs.cli:main"
spicy-regs-mcp = "spicy_regs.mcp_server:main"
spicy-regs-dict = "spicy_regs.data_dictionary:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
# Integration tests hit external services (the public Mirrulations S3 mirror)
# and are excluded from the default run so the unit suite stays hermetic. The
# dedicated "Integration (live data)" workflow runs them via `-m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: live test against external data (anonymous Mirrulations S3); run in the Integration CI workflow, not the default suite",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "notebooks"
]

[tool.pyrefly]
project-includes = [
    "**/*.py*"
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [
    "notebooks",
    ".venv",
    # Experimental Beam spike: apache-beam ships without complete type stubs and
    # is an optional extra (not installed in the default env), so exclude it
    # rather than loosen global type-checking. See src/spicy_regs/beam/README.md.
    "src/spicy_regs/beam",
    "tests/test_beam_pipeline.py",
]
