[project]
name = "spicy-regs"
version = "0.1.0"
description = "Regulations Data Analysis Tools"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "python-dotenv",
    "polars",
    "pyarrow",
    "tqdm",
    "httpx",
    "duckdb>=1.4", # >=1.4 required to ATTACH an Iceberg REST catalog and MERGE INTO it
    "pandas",
    "cyclopts",
    "loguru",
    "mcp>=1.10.0",
    "pypdf",
    "pyyaml",  # data dictionary descriptions (src/spicy_regs/data_dictionary.py)
]

[project.optional-dependencies]
embed = [
    "sentence-transformers",
    "torch",
]

[dependency-groups]
dev = [
    "ipykernel",
    "matplotlib",
    "pre-commit",
    "pyrefly",
    "pytest",
    "ruff",
    "scikit-learn",
    "seaborn",
    "textblob",
    "ty",
]
docs = [
    "mkdocs-material",
]

[project.scripts]
run-pipeline = "spicy_regs.pipelines.regulations:app"
run-rollup-feed-summary = "spicy_regs.pipelines.rollups.feed_summary:app"
run-rollup-agency-stats = "spicy_regs.pipelines.rollups.agency_stats:app"
run-rollup-agency-monthly-volume = "spicy_regs.pipelines.rollups.agency_monthly_volume:app"
run-rollup-docket-search = "spicy_regs.pipelines.rollups.docket_search:app"
run-rollup-lifecycles = "spicy_regs.pipelines.rollups.rulemaking_lifecycles:app"
run-rollup-discovery-signals = "spicy_regs.pipelines.rollups.discovery_signals:app"
run-rollup-fr-docket-links = "spicy_regs.pipelines.rollups.fr_docket_links:app"
enrich-pdf-text = "spicy_regs.enrich_pdf:main"
backfill-comment-text = "spicy_regs.backfill_derived_text:main"
embed = "spicy_regs.vectordb.embed:main"
spicy-regs = "spicy_regs.cli:main"
spicy-regs-mcp = "spicy_regs.mcp_server:main"
spicy-regs-dict = "spicy_regs.data_dictionary:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
# Integration tests hit external services (the public Mirrulations S3 mirror)
# and are excluded from the default run so the unit suite stays hermetic. The
# dedicated "Integration (live data)" workflow runs them via `-m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: live test against external data (anonymous Mirrulations S3); run in the Integration CI workflow, not the default suite",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "notebooks"
]

[tool.pyrefly]
project-includes = [
    "**/*.py*"
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [
    "notebooks",
    ".venv",
]
